# Create a minimal pyproject.toml without build-system
$minimal = @'
[project]
name = "meeting-scheduler-env"
version = "1.0.0"
description = "OpenEnv meeting scheduler environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
'@

[System.IO.File]::WriteAllText("pyproject.toml", $minimal, [System.Text.UTF8Encoding]::new($false))